[package]
name = "bevy-tic-tac-toe"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop"]
desktop = []
web = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
log = "0.4" 

# Use Bevy 0.10 - has better WASM compatibility and older getrandom
bevy = { version = "0.10", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "png",
] }

# Fix uuid for WASM - this overrides the version Bevy uses
uuid = { version = "1.0", features = ["v4", "js"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
getrandom = { version = "0.2", features = ["js"] }
